# aoc_rust

./: .env_example  .gitignore  Cargo.toml  day_10.txt  foo.txt
src/: main.rs  services.rs  solutions.rs
src/solutions/: solution_2022_1.rs  solution_2022_2.rs  solution_2022_3.rs  solution_2022_4.rs  solution_2022_5.rs  solution_2022_6.rs  solution_2022_7.rs  solution_tmpl.rs
src/solutions/year_2022/: day_1.rs  day_2.rs  day_3.rs  day_4.rs  day_5.rs  day_6.rs  day_7.rs
src/solutions/year_2023/: day_1.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_2.rs  day_3.rs  day_4.rs  day_5.rs  day_6.rs  day_7.rs  day_8.rs  day_9.rs  mod.rs
