[package]
name = "aoc_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-integer = "0.1.44"
chrono = "0.4.31"
dotenv = "0.15.0"
reqwest = "0.11"
time = "0.3.30"
tokio = { version = "1.32.0", features = ["full"] }
project-root = "0.2.2"
